syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbapp;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/app;pbapp";

// App source resource reference: pkg/dal/table/app.go
message App {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
  uint32 biz_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "业务ID：Deprecated: use space instead"
  }];
  string space_id = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  string space_type_id = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务类型ID" }];
  string space_name = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务名称" }];
  string space_type_name = 6
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务类型" }];
  AppSpec spec = 7;
  pbbase.Revision revision = 8;
}

// AppSpec source resource reference: pkg/dal/table/app.go
message AppSpec {
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
  string config_type = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务类型：文件型=file, 键值型=kv" }
  ];
  string memo = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务描述" }];
  string alias = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务别名" }];
  string data_type = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "键值型服务数据类型：(any、string、number、text、json、yaml、xml、secret)"
  }];
  bool is_approve = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "是否需要审批：是=true，否=false" }
  ];
  string approve_type = 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "审批类型：会签=count_sign、或签=or_sign"
  }];
  string approver = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "审批人列表" }];
}

// AuditApp audit and app
message AuditApp {
  string name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名" }];
  string creator = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "创建人" }];
  string approve_type = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "审批类型：会签=count_sign、或签=or_sign"
  }];
}
